[project]
name = "langchain-labs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.11.1",
    "duckdb>=1.5.3",
    "langchain>=1.3.9",
    "langchain-anthropic>=1.4.6",
    "matplotlib>=3.11.0",
    "python-dotenv>=1.2.2",
]
